# rsynth

./: Cargo.toml
src/: angle.rs  frequency.rs  lib.rs  main.rs  player.rs  rate.rs  signal.rs  voltage.rs
src/signal/: amp.rs  boxed.rs  clock.rs  factor.rs  multiple.rs  saw.rs  sequence.rs  sine.rs  square.rs  sum.rs
