[package]
name = "rsynth"
version = "0.1.0"
authors = ["Lars Petersen <info@lars-petersen.net>"]
edition = "2018"

[dependencies]
libpulse-simple-binding = { version = "2.16.0", default-features = false }
libpulse-binding = { version = "2.16.0", default-features = false }

[profile.release]
lto = true
debug = false
panic = "abort"
